Update Principal.java
Mod: List.of